--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^8.2.2"
+  },
+  "dependencies": {
+    "pptxgenjs": "^4.0.0"
   }
 }
