--- a/server/package.json
+++ b/server/package.json
@@ -27,7 +27,8 @@
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "jwt-decode": "^4.0.0",
-    "mongoose": "^7.6.3"
+    "mongoose": "^7.6.3",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "concurrently": "^9.1.2",
